# NLOTrajectories

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/: python-ci.yml
.github/workflows/: python-ci.yml
_l4c_generated/: adj1_nn_sdf.pt  jac_adj1_nn_sdf.pt  jac_nn_sdf.pt  libnn_sdf.dylib  nn_sdf.cpp  nn_sdf.pt
configs/: broken.yaml  broken2.yaml  try_to_guess.yaml
demo/: Multiple_shooting_demo.py  Single_shooting_demo.py
docs/: contributing.md  setup.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
results/: benchmark_2_unicycle_circle_results.csv  benchmark_3_unicycle_circles_results.csv
src/nlotrajectories/: editor.py  main.py  tkinter_editor.py
src/nlotrajectories/benchmarks/: benchmark_1_dot_circle.yaml  benchmark_2_unicycle_circle.yaml  benchmark_3_unicycle_circles.yaml  benchmark_3_unicycle_convex.yaml  benchmark_4_dot_nonconvex.yaml  benchmark_5_ackermann_circle.yaml  final_1.yaml  final_3.yaml  generated.yaml  wave_road.yaml
src/nlotrajectories/core/: config.py  dynamics.py  geometry.py  metrics.py  nn_architectures.py  runner.py  trajectory_initialization.py  utils.py  visualizer.py
src/nlotrajectories/core/sdf/: casadi.py  l4casadi.py
src/nlotrajectories/scripts/: run_benchmark.py  tkinter_editor.py
tests/unit/: test_geometry.py
