[project]
name = "nlotrajectories"
version = "0.1.0"
description = "Robot Motion Planning: Trajectory optimization in learned environments"
authors = [
    {name = "Mariia Iavorskaia",email = "all.mails.are.busy@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
