[project]
name = "nlotrajectories"
version = "0.1.0"
description = "Robot Motion Planning: Trajectory optimization in learned environments"
authors = [
    {name = "Mariia Iavorskaia",email = "all.mails.are.busy@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "casadi (>=3.7.0,<4.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
ipykernel = "^6.29.5"
matplotlib = "^3.10.1"
pytest = "^8.3.5"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "*Test Test*"
