[project]
name = "nlotrajectories"
version = "0.1.0"
description = "Robot Motion Planning: Trajectory optimization in learned environments"
authors = [
    {name = "Mariia Iavorskaia",email = "all.mails.are.busy@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "casadi (>=3.7.0,<4.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "setuptools (>=80.7.1,<81.0.0)",
    "scikit-build (>=0.18.1,<0.19.0)",
    "cmake (>=3.5.0,<4.0.0)",
    "ninja (>=1.11.1.4,<2.0.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "scipy (>=1.16.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
ipykernel = "^6.29.5"
matplotlib = "^3.10.1"
pytest = "^8.3.5"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "*Test Test*"

[tool.poetry]
packages = [{ include = "nlotrajectories", from = "src" }]

[tool.poetry.scripts]
run-benchmark = "nlotrajectories.scripts.run_benchmark:main"
